--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,15 +29,17 @@ dist.jar=${dist.dir}/SampleSlf4j.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.log4j-1.2.17.jar=lib/log4j-1.2.17.jar
+file.reference.log4j-api-2.1.jar=lib/log4j-api-2.1.jar
+file.reference.log4j-core-2.1.jar=lib/log4j-core-2.1.jar
+file.reference.log4j-slf4j-impl-2.1.jar=lib/log4j-slf4j-impl-2.1.jar
 file.reference.slf4j-api-1.7.10.jar=lib/slf4j-api-1.7.10.jar
-file.reference.slf4j-log4j12-1.7.10.jar=lib/slf4j-log4j12-1.7.10.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.slf4j-api-1.7.10.jar}:\
-    ${file.reference.log4j-1.2.17.jar}:\
-    ${file.reference.slf4j-log4j12-1.7.10.jar}
+    ${file.reference.log4j-api-2.1.jar}:\
+    ${file.reference.log4j-slf4j-impl-2.1.jar}:\
+    ${file.reference.log4j-core-2.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
